feat: add job title and industry selection
- Add react-select for searchable dropdowns
- Create predefined lists of job titles and industries
- Make responsibilities and skills optional
- Increase logo size for better visibility
- Add custom input for 'Other' options
- Improve form validation and error handling

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@react-pdf/renderer": "^4.1.6",
+    "@types/react-select": "^5.0.0",
     "@vercel/analytics": "^1.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -33,6 +34,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-select": "^5.9.0",
     "recharts": "^2.15.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.1.0",
