--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@react-pdf/renderer": "^4.1.6",
+    "@supabase/supabase-js": "^2.39.3",
     "@types/react-select": "^5.0.0",
     "@vercel/analytics": "^1.4.1",
     "class-variance-authority": "^0.7.0",
@@ -39,7 +40,7 @@
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.1"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -52,6 +53,6 @@
     "eslint-config-next": "15.1.3",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "typescript": "^5.3.3"
   }
 }
